# srm_collecte

./: .gitignore  AGENTS.md  RELEASE_CHECKLIST.md  gps.txt  script.ipynb
.githooks/: pre-commit  pre-push
API_GeoDjango/: .dockerignore  Caddyfile  Dockerfile  docker-compose.yml  entrypoint.sh  migration_error.txt  requirements-dev.txt  requirements.txt
PPRCollecte_Flutter/: .gitignore  .metadata  README.md  analysis_options.yaml  pubspec.yaml
PPRCollecte_Flutter/android/app/src/main/cpp/: CMakeLists.txt
csv/: _summary.json  _summary.md  asst_bassin.csv  asst_branchement.csv  asst_canalisation_bureau.csv  asst_canalisation_reutilisation.csv  asst_canalisation_terrain.csv  asst_equipement.csv  asst_ouvrage.csv  asst_regard.csv  asst_regard_branchement.csv  asst_station.csv  elec_cellule.csv  elec_coffret_bt.csv  elec_depart_bt.csv  elec_depart_hta.csv  elec_noeud_raccord.csv  elec_point_desserte.csv  elec_poste.csv  elec_support.csv  elec_transformateur.csv  elec_troncon_bt.csv  elec_troncon_hta.csv  ep_anomalie_conduite.csv  ep_bache.csv  ep_bouche_arro.csv  ep_conduite_bureau.csv  ep_conduite_terrain.csv  ep_hydrant.csv  ep_regard_pret.csv  ep_station_pompage.csv  ep_tn.csv  ep_voie.csv
docs/: accent_cleanup_changes_2026-05-04.json  accent_final_scan_2026-05-04.json  accent_mojibake_base_tables_scan_2026-05-04.json  accent_mojibake_scan_2026-05-04.json  accent_mojibake_true_rescan_after_cleanup_2026-05-04.json  accent_mojibake_true_scan_2026-05-04.json  accent_question_mark_rescan_after_cleanup_2026-05-04.json  accent_question_mark_scan_2026-05-04.json  (+20 more)
(+497 files in other folders)
